fix: layout for single col on mobile

--- a/assets/styles/components/_schedule.scss
+++ b/assets/styles/components/_schedule.scss
@@ -10,6 +10,8 @@
 
     &__session,
     &__break {
+        display: flex;
+        flex-direction: column;
         grid-column-start: 2;
     }
 
